--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Umi Shima - Discover the beauty of ocean-inspired collections and handcrafted designs." />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Umi Shima - Discover the beauty of ocean-inspired collections and handcrafted designs.">
     <title>Umi Shima | Contact</title>
     
     <!-- Fonts -->
