--- a/references.html
+++ b/references.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Umi Shima - Discover the beauty of ocean-inspired collections and handcrafted designs." />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Umi Shima - Discover the beauty of ocean-inspired collections and handcrafted designs.">
     <title>Umi Shima | Products</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
